# wordgen

./: .gitignore  Cargo.toml  README.md  app.js  index.html
pkg/: package.json  wordgen.d.ts  wordgen.js  wordgen_bg.wasm  wordgen_bg.wasm.d.ts
src/: lib.rs  main.rs  word.rs
