[package]
name = "wordgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
reqwest = {version = "0.11.24", features = ["blocking"] }
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]